# manager

./: README.md  __init__.py  alter-list.json  channels.list.template  cm-cli.py  custom-node-list.json  extension-node-map.json  extras.json  git_helper.py  github-stats.json  model-list.json  openapi.yaml  prestartup_script.py  pyproject.toml  scanner.py
.github/workflows/: publish-to-pypi.yml  publish.yml
docs/: README.md
docs/en/: cm-cli.md  use_aria2.md  v3.38-userdata-security-migration.md
docs/ko/: cm-cli.md
glob/: README.md  cnr_utils.py  git_utils.py  manager_core.py  manager_downloader.py  manager_migration.py  manager_server.py  manager_util.py  security_check.py  share_3rdparty.py
js/: README.md  cm-api.js  comfyui-manager.js  comfyui-share-common.js  comfyui-share-copus.js  comfyui-share-youml.js  common.js  components-manager.js  custom-nodes-manager.js  model-manager.js  snapshot.js  workflow-metadata.js
node_db/: README.md
node_db/dev/: custom-node-list.json  extension-node-map.json  github-stats.json
node_db/forked/: custom-node-list.json
node_db/legacy/: custom-node-list.json  model-list.json
node_db/new/: custom-node-list.json  extension-node-map.json  model-list.json
node_db/tutorial/: custom-node-list.json  extension-node-map.json
notebooks/: comfyui_colab_with_manager.ipynb
scripts/: install-comfyui-venv-linux.sh  install-comfyui-venv-win.bat  install-manager-for-portable-version.bat
