[project]
name = "hanzo-studio-manager"
description = "Hanzo Manager provides features to install and manage custom nodes for Hanzo Studio, as well as various functionalities to assist with Hanzo Studio."
version = "3.39.2"
license = { file = "LICENSE.txt" }
dependencies = ["GitPython", "PyGithub", "matrix-nio", "transformers", "huggingface-hub>0.20", "typer", "rich", "typing-extensions", "toml", "uv", "chardet"]

[project.urls]
Repository = "https://github.com/ltdrdata/ComfyUI-Manager"
#  Used by Comfy Registry https://registry.hanzo.ai

[tool.comfy]
PublisherId = "drltdata"
DisplayName = "Hanzo Manager"
Icon = ""
